# one-for-all

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SCROLL_DEBUGGING.md  codecov.yml  package.json  pnpm-lock.yaml  render.yaml  target.md  verify-setup.sh
apps/backend/: .coverage  .env.example  .env.test  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  render.yaml  requirements-api.txt  requirements.txt  test_endpoints.py  test_imports.py
apps/backend/src/one_for_all/: api.py  crew.py  main.py  observability.py  scanner_crew.py
apps/backend/src/one_for_all.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend/supabase/: ERD-unified.md  SCHEMA_REFERENCE.md  SETUP_GUIDE.md
apps/backend/supabase/migrations/: 000_complete_schema.sql  001_auth_setup.sql  002_institutions_schema.sql  003_scan_jobs.sql  004_add_invitation_fields.sql  005_add_course_level.sql  006_rename_applicant_tables.sql  007_updated_rls_policies.sql  008_fix_function_search_paths.sql  009_move_vector_extension.sql  010_otp_codes.sql  011_institution_roles.sql  012_export_applications_permission.sql  012_update_institution_members.sql  013_course_dates.sql  014_application_choices.sql  015_migrate_application_choices.sql  016_student_numbers.sql  017_seed_student_number_formats.sql  018_seed_test_applications.sql  019_application_notes.sql  020_document_flagging.sql  021_extended_test_data.sql  022_remove_test_data.sql  023_fresh_test_applications.sql  024_agent_sandbox.sql  024_saved_charts.sql  025_intake_document_validation.sql  026_application_rankings_view.sql  027_course_threshold_overrides.sql  028_analytics_indexes.sql  028_notification_logs.sql  028_rankings_refresh_queue.sql  030_fulltext_search.sql  031_session_token_hardening.sql  032_rag_content_verification.sql  033_document_security_fields.sql  20240522000000_initial_schema.sql  20260107_document_storage.sql  20260107_update_document_tables.sql  (+6 more)
apps/backend/tests/: QUICKSTART.md  README.md  __init__.py  conftest.py
apps/backend/tests/api/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TEST_COVERAGE.md  __init__.py  test_agents.py  test_endpoints.py  test_health.py  test_sessions.py
apps/backend/tests/cassettes/: TestAuthToolSequence.test_auth_agent_uses_otp_before_session.yaml  TestAuthToolSequence.test_auth_flow_records_all_verification_steps.yaml  TestDocumentHandling.test_all_documents_available.yaml  TestDocumentHandling.test_missing_documents_marked_pending.yaml  TestDocumentHandling.test_no_documents_available.yaml  TestDocumentHandling.test_partial_documents_workflow_continues.yaml  TestDocumentRequirements.test_masters_research_proposal_required.yaml  TestDocumentRequirements.test_postgraduate_document_requirements.yaml  TestDocumentRequirements.test_undergraduate_document_requirements.yaml  TestDocumentValidation.test_document_status_metadata_structure.yaml  TestDocumentValidation.test_i_will_provide_later_accepted.yaml  TestNSFASConditional.test_nsfas_executed_for_eligible_undergrad.yaml  (+17 more)
supabase/: ERD.md
(+605 files in other folders)
