[project]
name = "one_for_all"
version = "0.1.0"
description = "CrewAI-powered South African university & NSFAS automation assistant"
authors = [{name="Your Name"}]
dependencies = [
    "crewai>=0.63.0",
    "crewai-tools",
    "python-dotenv",
    "supabase",
    "requests",
    "langchain",
    "langchain-community",
    "litellm>=1.0.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-crewai>=0.1.0",
    "openinference-instrumentation-litellm>=0.1.0",
    # API server dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=0.8.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.1",
    "httpx>=0.27.0",
    "locust>=2.0.0",
]

[tool.setuptools.package-data]
"one_for_all.config" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: Integration tests that test complete workflows",
    "unit: Unit tests for individual components",
    "e2e: End-to-end tests against staging environment",
    "slow: Tests that take longer to execute",
    "requires_db: Tests that require database access",
    "requires_api: Tests that require external API access",
    "vcr: Tests that use VCR cassettes for LLM response replay",
]

[tool.coverage.run]
source = ["src/one_for_all"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
